# goblin

./: CHANGELOG.md  Cargo.toml  Makefile
src/: lib.rs  strtab.rs
src/elf/: compression_header.rs  dynamic.rs  note.rs  program_header.rs  reloc.rs  section_header.rs  sym.rs
